2.8.2
-----
1. Only show multi-disc icon, and prompt for disc to use, etc., if LMS is set to
   group multi-disc albums.
2. Add add and play actions to subtoolbar for 'All songs' listings.
3. Don't show disc headers in 'All songs' listings.
4. Hide settings password.
5. Update gallery image when track changes if this is showing now playing cover.

2.8.1
-----
1. Fix hiding queue.
2. Reduce desktop splitter width to 1px.
3. When navigating lists by entering text, if press enter then 'click' on first
   match.
4. Close expanded now-playing via 'esc' key on desktop layout.
5. If displaying a "More..." list and there is already a "More..." entry in
   the history, then clear history up to previous "More..." - so that there is
   only 1 "More..." entry.

2.8.0
-----
 1. Draw multi-disc icon top-left for multi-disc albums, in grid view.
 2. Add 'Remove disc' option to play queue context menu.
 3. When adding a multi-disc album, prompt whether to add all discs or just a
    specific disc.
 4. Replace $FAVURL with item's favourite URL in custom actions.
 5. Add (server side) setting to use comment field as disc title for multi-disc
    albums.
 6. Add 'Play disc starting at track' action for multi-disc albums.
 7. Remove 'more' action if is the same as 'go'
 8. When showing jumplist of (e.g.) 'New Music' show same dots for active and
    inactive, just change colour of active item.
 9. Adjust desktop default pane sizes; queue 30% min-width 400px.
10. Remove 'Open mini-player' buttons from players menu.
11. If screen is 320px or less, then don't show covers in 'Manage players'
    dialog - to give player name more space.
12. Place Spotty's actions from end of album track list into a menu.
13. Update Spotty icon mapping.
14. Add button to control synchronisation to 'Player settings' dialog.
15. Redesign 'Synchronisation' dialog to have a check list.
16. Don't scroll action selector with players list in 'Transfer queue' dialog.